<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vista.stockquote.MainActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <!-- the linear here is to get the focus when first launch to avoid show keyboard -->
        <LinearLayout
            android:id="@+id/hiddenLineToGetFocus"
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" 
            android:orientation="horizontal" />

        <EditText
            android:id="@+id/stockSymbolEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/stock_symbol" />

        <Button
            android:id="@+id/addStockButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/black" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center_horizontal" >

            <TableLayout
                android:id="@+id/stockScrollView"
                android:layout_width="match_parent"
                android:layout_height="368dp"
                android:background="@color/black"
                android:gravity="center_horizontal"
                android:stretchColumns="yes" >
            </TableLayout>
        </ScrollView>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/refreshListButton"
            style="android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/refresh" />

        <Button
            android:id="@+id/clearListButton"
            style="android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_list" />

    </TableRow>

</TableLayout>